# deel-takehome

./: .env_template  .gitignore  README.md  pyproject.toml
airflow/: Dockerfile  Makefile  docker-compose.yaml  requirements.txt
airflow/dags/: dbt_dag.py
dbt/deel_takehome/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
dbt/deel_takehome/models/: sources.yml
dbt/deel_takehome/models/dimensions/: dim__organizations.sql  schema.yml
dbt/deel_takehome/models/fact_tables/: fct__organizations_balance.sql  schema.yml
dbt/deel_takehome/models/staging/: schema.yml  stg__invoices.sql  stg__organizations.sql
input/: invoices_sample.csv
monitoring/: __init__.py  create_snowflake_connector.py  monitoring_queries.py  run_monitoring.py  slack_notifier.py  snowflake_reader.py  utils.py
output/: dim__organizations.csv
tests/: __init__.py
tests/monitoring/: __init__.py  test_create_snowflake_connector.py  test_run_monitoring.py  test_slack_notifier.py  test_snowflake_reader.py  test_utils.py
